# nexus-hackathon-2026

./: .gitignore  START_NEXUS.sh  START_ULTRA_LIGHT.sh  start.sh
install/: local_setup.sh  setup.sh
install/mission_controller/share/mission_controller/: package.dsv  package.ps1  package.sh
install/web_dashboard/share/web_dashboard/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros2_ws/src/nexus_bringup/: package.xml  setup.py
ros2_ws/src/nexus_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/nexus_controller/nexus_controller/controllers/: __init__.py  robot_controller.py
ros2_ws/src/nexus_dashboard/: package.xml  setup.cfg  setup.py
ros2_ws/src/nexus_simulation/: package.xml  setup.cfg  setup.py
src/mission_controller/: launch_mission.sh  package.xml  setup.py
src/mission_controller/mission_controller/: mission_node.py
src/web_dashboard/: launch_dashboard.sh  package.xml  setup.py
src/web_dashboard/worlds/: smart_office.world
