<?xml version="1.0"?>
<package format="3">
  <name>web_dashboard</name>
  <version>2.0.0</version>
  <description>NEXUS Web Dashboard</description>
  <maintainer email="nexus@hackathon.io">NEXUS</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>cv_bridge</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
